fix: overflow-w for small devices

--- a/assets/css/syntax.css
+++ b/assets/css/syntax.css
@@ -1,6 +1,7 @@
 .highlight {
   position: relative;
   width: 100%;
+  overflow: auto;
 }
 
 .highlight table,
